<resources>
    <string name="app_name">SmartCookingRecipe</string>
    <string name="title_home">Home</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="recipe_categories_title">Recipe Categories</string>
    <string name="no_recipes_found">No Recipe Found!</string>
    <string name="start_cooking">Cook!</string>
    <string name="view_check_ingredients">Check Ingredients</string>
    <string name="ingredient_checklist_title">Checklist Ingredients</string>
    <string name="proceed_to_cooking_steps">Go Back</string>
    <string name="tooltip_check_substitutions">Check Substitute Ingredients</string>
    <string name="select_substitution_message">Select ingredients to be used for the substitute</string>
    <string name="confirm_substitution">Substitute Ingredients</string>
    <string name="previous">Back</string>
    <string name="next">Next Step</string>
    <string name="finish_cooking">Finish!</string>
    <string name="nutritional_facts_title">Nutrition Facts</string>
    <string name="nutrition_calories">Calories</string>
    <string name="nutrition_protein">Proteins</string>
    <string name="nutrition_carbs">Carbohydrates</string>
    <string name="nutrition_fat">Fats</string>
    <string name="log_meal_to_tracker">Store to today\'s nutrition</string>
    <string name="inventory_title">Ingredients Inventory</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_expiry">Expiry date</string>
    <string name="sort_by_date_added">Date added</string>
    <string name="content_desc_add_inventory_item">Add Ingredients</string>
    <string name="inventory_empty">No Ingredients Stocked!</string>
    <string name="inventory_calendar_title">Check Your Ingredients</string>
    <string name="expiring_this_week">Expiring This Week</string>
    <string name="recipe_recommendations">Recomended recipe based on expiry date</string>
    <string name="hint_expiry_date">dd/mm/yyyy</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="or_enter_manually">Manual input</string>
    <string name="hint_ingredient_name">Ingredient name</string>
    <string name="hint_quantity">Amount</string>
    <string name="hint_unit">Unit</string>
    <string name="scan_barcode_instructions">Scan product\'s barcode</string>
    <string name="daily_nutrition_title">Daily Nutrition Info</string>
    <string name="summary_calories_consumed">Calories consumed</string>
    <string name="macronutrient_breakdown">Macro nutrients breakdown</string>
    <string name="logged_meals">Cooked meals</string>
    <string name="dietary_preferences_title">Preferences &amp; Allergies</string>
    <string name="preferences_section_title">Preferences</string>
    <string name="preference_no_carbs">No Carbs</string>
    <string name="preference_high_protein">High Protein</string>
    <string name="allergies_section_title">Allergies</string>
    <string name="allergy_seafood">Seafood</string>
    <string name="allergy_milk">Milk</string>
    <string name="allergy_nuts">Nuts</string>
    <string name="nutrition_alerts_title">Nutritional Alerts</string>
    <string name="enable_nutrition_alerts">Enable Nutrition Alert</string>
    <string name="save_preferences">Save</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="upload_image">Upload Gambar</string>

    <string-array name="units_array">
        <item>pcs</item>
        <item>kilograms</item>
        <item>grams</item>
        <item>milligrams</item>
        <item>liter</item>
        <item>tablespoon</item>
        <item>milliliter</item>
        <item>teaspoon</item>
    </string-array>

</resources>