<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

<!--    Bottom Navbar-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smartcookingrecipe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_activity_dashboard" >

        <action
            android:id="@+id/act_home_to_recipeDetails"
            app:destination="@id/fragmentRecipeDetails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.smartcookingrecipe.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.example.smartcookingrecipe.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients">

        <action
            android:id="@+id/act_ingredients_to_recordIngredients"
            app:destination="@id/fragmentRecordIngredients" />
        <action
            android:id="@+id/act_ingredients_to_ingredientsList"
            app:destination="@id/fragmentIngredientsList" />
    </fragment>

    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="com.example.smartcookingrecipe.ui.nutrition.NutritionFragment"
        android:label="@string/title_nutrition"
        tools:layout="@layout/fragment_daily_nutrition" />

    <!--    Record Ingredients sub-section-->
    <fragment
        android:id="@+id/fragmentRecordIngredients"
        android:name="com.example.smartcookingrecipe.ui.ingredients.RecordIngredientsFragment"
        tools:layout="@layout/fragment_inventory_add_edit"
        android:label="Record Ingredients" />

    <fragment
        android:id="@+id/fragmentIngredientsList"
        android:name="com.example.smartcookingrecipe.ui.ingredients.CheckIngredientsFragment"
        tools:layout="@layout/fragment_inventory_list"
        android:label="Ingredients List" />

    <!--    Recipe sub-section-->
    <fragment
        android:id="@+id/fragmentRecipeDetails"
        android:name="com.example.smartcookingrecipe.ui.recipe.RecipeDetailsFragment"
        tools:layout="@layout/fragment_recipe_detail"
        android:label="Recipe Information" >

        <action
            android:id="@+id/act_recipeDetails_to_recipeSteps"
            app:destination="@id/fragmentRecipeSteps" />
        <action
            android:id="@+id/act_recipeDetails_to_recipeIngredients"
            app:destination="@id/fragmentRecipeIngredients" />
    </fragment>

    <fragment
        android:id="@+id/fragmentRecipeSteps"
        android:name="com.example.smartcookingrecipe.ui.recipe.RecipeStepsFragment"
        tools:layout="@layout/fragment_recipe_steps"
        android:label="Recipe Steps" >

        <action
            android:id="@+id/act_recipeSteps_to_postCooking"
            app:destination="@id/fragmentPostCooking" />
    </fragment>

    <fragment
        android:id="@+id/fragmentRecipeIngredients"
        android:name="com.example.smartcookingrecipe.ui.recipe.RecipeIngredientsFragment"
        tools:layout="@layout/fragment_ingredient_checklist"
        android:label="Recipe Ingredients" />

    <fragment
        android:id="@+id/fragmentPostCooking"
        android:name="com.example.smartcookingrecipe.ui.recipe.FinishCookingFragment"
        tools:layout="@layout/fragment_post_cooking"
        android:label="Finish Cooking" />
</navigation>