<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.recipes.ui.steps.StepFragment">

    <ImageView
        android:id="@+id/image_step"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_recipe_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="content_desc_step_image"/>

    <TextView
        android:id="@+id/text_step_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        tools:text="Step 1"
        app:layout_constraintTop_toBottomOf="@id/image_step"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_step_instruction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:scrollbars="vertical"
        tools:text="Instruction for this step goes here. It might be quite long, describing exactly what to do. Ensure ingredients are prepared. Mix the wet ingredients first, then add the dry ingredients slowly."
        app:layout_constraintTop_toBottomOf="@id/text_step_number"
        app:layout_constraintBottom_toTopOf="@id/button_finish_cooking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_previous_step"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_finish_cooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_cooking"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>